--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,35 +1,35 @@
 {
   "dependencies": {
-    "com.coffee.upm-git-extension": "1.3.4",
+    "com.coffee.upm-git-extension": "2.0.0-preview.1",
     "com.johannesmp.unityscenereference": "1.1.1",
     "com.sjai013.abilitysystem": "https://github.com/sjai013/unity-gameplay-ability-system.git#upm",
     "com.unigame.addressable-importer": "2021.0.2",
-    "com.unigame.gittools": "2020.0.3",
+    "com.unigame.gittools": "2020.0.4",
     "com.unity.2d.animation": "5.0.9",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.1.2",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "5.1.5",
+    "com.unity.2d.spriteshape": "5.1.6",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.18.19",
     "com.unity.assetbundlebrowser": "https://github.com/Unity-Technologies/AssetBundles-Browser.git",
-    "com.unity.cinemachine": "2.6.4",
+    "com.unity.cinemachine": "2.6.11",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ext.nunit": "1.0.6",
-    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.inputsystem": "1.0.2",
     "com.unity.polybrush": "1.0.2",
-    "com.unity.postprocessing": "3.1.0",
-    "com.unity.probuilder": "4.5.0",
+    "com.unity.postprocessing": "3.1.1",
+    "com.unity.probuilder": "4.5.2",
     "com.unity.quicksearch": "2.0.2",
     "com.unity.render-pipelines.universal": "10.7.0",
-    "com.unity.scriptablebuildpipeline": "1.19.2",
+    "com.unity.scriptablebuildpipeline": "1.19.3",
     "com.unity.shadergraph": "10.7.0",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.20-preview",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.21-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.8",
     "com.unity.modules.ai": "1.0.0",
